--- a/package.json
+++ b/package.json
@@ -47,8 +47,11 @@
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
+    "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "karma-json-reporter": "^1.2.1",
+    "karma-mocha-reporter": "^2.2.5",
     "typescript": "~4.7.2"
   }
 }
