--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "e2e": "ng e2e",
     "ng2ninja": "ng2ninja",
     "format": "prettier --write \"{src,cypress}/**/*.+(ts|js|json|html|css)\"",
-    "postinstall": "npm run format"
+    "postinstall": "npm run format",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "lint": "ng lint"
